// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation component Renders correctly with home theme 1`] = `
<div>
  <div
    class="bg-white z-10"
  >
    <header
      class="relative bg-brand-black"
    >
      <nav
        aria-label="Top"
        class="max-w-7xl mx-auto px-4 md:px-6 xl:px-8"
      >
        <div
          class="h-16 flex items-center justify-between border-b border-brand-black"
        >
          <div
            class="flex-1 flex items-center xl:hidden"
          >
            <button
              class="-ml-2 bg-white p-2 rounded-md text-gray-400"
              data-testid="button-open"
              type="button"
            >
              <span
                class="sr-only"
              >
                Open menu
              </span>
              <svg
                aria-hidden="true"
                class="h-6 w-6"
                fill="none"
                stroke="currentColor"
                stroke-width="2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 6h16M4 12h16M4 18h16"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </button>
          </div>
          <div
            class="hidden xl:flex-1 xl:block xl:self-stretch"
          >
            <div
              class="h-full flex space-x-10"
            >
              <a
                class="flex items-center text-white hover:text-coreUI-text-tertiary pb-1.5 duration-500"
                href="//www.60beans.de/uber-uns"
              >
                <span
                  class="uppercase text-sm leading-5"
                >
                  Über uns
                </span>
              </a>
              <a
                class="flex items-center text-white hover:text-coreUI-text-tertiary pb-1.5 duration-500"
                href="//blog.60beans.com"
              >
                <span
                  class="uppercase text-sm leading-5"
                >
                  Blog
                </span>
              </a>
            </div>
          </div>
          <a
            class="flex h-full items-center pl-2 pr-2"
            href="//www.60beans.de"
          >
            <span
              class="sr-only"
            >
              60beans
            </span>
            <img
              alt="60beans"
              class="h-6"
              src="60beans-light.svg"
            />
          </a>
          <div
            class="flex-1 flow-root flex h-full items-center"
          >
            <div
              class="flex-1 flex h-full items-center justify-end xl:flex-none"
            >
              <div
                class="hidden h-full xl:flex space-x-8 justify-end"
              >
                <a
                  class="flex items-center text-white hover:text-coreUI-text-tertiary pb-1.5 duration-500"
                  href="/taste-finder"
                >
                  <span
                    class="uppercase text-sm leading-5"
                  >
                    Tastefinder
                  </span>
                </a>
              </div>
              <a
                class="hidden xl:block ml-10"
                href="/profile"
              >
                <svg
                  class="undefined fill-brand-black stroke-brand-black"
                  fill="inherit"
                  height="25"
                  viewBox="0 0 24 24"
                  width="25"
                >
                  <path
                    clip-rule="evenodd"
                    d="M16 8.66663C16 10.8766 14.21 12.6666 12 12.6666C9.79 12.6666 8 10.8766 8 8.66663C8 6.45663 9.79 4.66663 12 4.66663C14.21 4.66663 16 6.45663 16 8.66663ZM4 18.6666C4 16.0066 9.33 14.6666 12 14.6666C14.67 14.6666 20 16.0066 20 18.6666V20.6666H4V18.6666Z"
                    fill="#FFFFFF"
                    fill-rule="evenodd"
                    stroke="none"
                    stroke-width="none"
                  />
                </svg>
              </a>
              <div
                class="ml-4 flow-root xl:ml-10"
              >
                <button
                  class="relative inline-flex flex-row items-center rounded-full border-2 px-3 py-2 text-sm font-semibold disabled:bg-brand-grey-whisper disabled:text-coreUI-text-secondary disabled:cursor-not-allowed text-brand-black bg-primary border-transparent hover:bg-brand-green-starship active:bg-primary"
                  data-testid="button-shop"
                  role="button"
                >
                  Shop
                </button>
              </div>
            </div>
          </div>
        </div>
      </nav>
    </header>
  </div>
</div>
`;

exports[`Navigation component Renders correctly with shop theme 1`] = `
<div>
  <div
    class="bg-white z-10"
  >
    <header
      class="relative bg-brand-black"
    >
      <nav
        aria-label="Top"
        class="max-w-7xl mx-auto px-4 md:px-6 xl:px-8"
      >
        <div
          class="h-16 flex items-center justify-between border-b border-brand-black"
        >
          <div
            class="flex-1 flex items-center xl:hidden"
          >
            <button
              class="-ml-2 bg-white p-2 rounded-md text-gray-400"
              data-testid="button-open"
              type="button"
            >
              <span
                class="sr-only"
              >
                Open menu
              </span>
              <svg
                aria-hidden="true"
                class="h-6 w-6"
                fill="none"
                stroke="currentColor"
                stroke-width="2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 6h16M4 12h16M4 18h16"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </button>
          </div>
          <div
            class="hidden xl:flex-1 xl:block xl:self-stretch"
          >
            <div
              class="h-full flex space-x-10"
            >
              <a
                class="flex items-center text-white hover:text-coreUI-text-tertiary pb-1.5 duration-500"
                href="//www.60beans.de/uber-uns"
              >
                <span
                  class="uppercase text-sm leading-5"
                >
                  Über uns
                </span>
              </a>
              <a
                class="flex items-center text-white hover:text-coreUI-text-tertiary pb-1.5 duration-500"
                href="//blog.60beans.com"
              >
                <span
                  class="uppercase text-sm leading-5"
                >
                  Blog
                </span>
              </a>
            </div>
          </div>
          <a
            class="flex h-full items-center pl-2 pr-2"
            href="//www.60beans.de"
          >
            <span
              class="sr-only"
            >
              60beans
            </span>
            <img
              alt="60beans"
              class="h-6"
              src="60beans-light.svg"
            />
          </a>
          <div
            class="flex-1 flow-root flex h-full items-center"
          >
            <div
              class="flex-1 flex h-full items-center justify-end xl:flex-none"
            >
              <div
                class="hidden h-full xl:flex space-x-8 justify-end"
              >
                <a
                  class="flex items-center text-white hover:text-coreUI-text-tertiary pb-1.5 duration-500"
                  href="/taste-finder"
                >
                  <span
                    class="uppercase text-sm leading-5"
                  >
                    Tastefinder
                  </span>
                </a>
              </div>
              <a
                class="hidden xl:block ml-10"
                href="/profile"
              >
                <svg
                  class="undefined fill-brand-black stroke-brand-black"
                  fill="inherit"
                  height="25"
                  viewBox="0 0 24 24"
                  width="25"
                >
                  <path
                    clip-rule="evenodd"
                    d="M16 8.66663C16 10.8766 14.21 12.6666 12 12.6666C9.79 12.6666 8 10.8766 8 8.66663C8 6.45663 9.79 4.66663 12 4.66663C14.21 4.66663 16 6.45663 16 8.66663ZM4 18.6666C4 16.0066 9.33 14.6666 12 14.6666C14.67 14.6666 20 16.0066 20 18.6666V20.6666H4V18.6666Z"
                    fill="#FFFFFF"
                    fill-rule="evenodd"
                    stroke="none"
                    stroke-width="none"
                  />
                </svg>
              </a>
              <div
                class="ml-4 flow-root xl:ml-10"
              >
                <a
                  class="group -m-2 p-2 flex items-center"
                  href="/cart"
                  id="toCart"
                >
                  <div
                    class="static flex-shrink-0 relative"
                  >
                    <svg
                      class="undefined fill-brand-black stroke-brand-black"
                      fill="inherit"
                      height="25"
                      viewBox="0 0 24 24"
                      width="25"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M0 0.75C0 0.335786 0.335786 0 0.75 0H2.75C3.10751 0 3.41532 0.252345 3.48544 0.602913L3.76485 2H18.75C19.0099 2 19.2513 2.13459 19.388 2.3557C19.5246 2.57681 19.5371 2.85292 19.4208 3.08541L15.4208 11.0854C15.2938 11.3395 15.0341 11.5 14.75 11.5H5.06066L2.98744 13.5732C2.82995 13.7307 2.94149 14 3.16421 14H4.75H14.75C16.2688 14 17.5 15.2312 17.5 16.75C17.5 18.2688 16.2688 19.5 14.75 19.5C13.2312 19.5 12 18.2688 12 16.75C12 16.2999 12.1081 15.875 12.2999 15.5H7.20015C7.39186 15.875 7.5 16.2999 7.5 16.75C7.5 18.2688 6.26878 19.5 4.75 19.5C3.23122 19.5 2 18.2688 2 16.75C2 16.2296 2.14453 15.743 2.39564 15.3281C1.38299 14.8385 1.02537 13.414 1.92678 12.5126L3.93585 10.5035L2.41456 2.89709L2.13515 1.5H0.75C0.335786 1.5 0 1.16421 0 0.75ZM5.36485 10H14.2865L17.5365 3.5H4.06485L5.36485 10ZM4.75 15.5C4.05964 15.5 3.5 16.0596 3.5 16.75C3.5 17.4404 4.05964 18 4.75 18C5.44036 18 6 17.4404 6 16.75C6 16.0596 5.44036 15.5 4.75 15.5ZM14.75 15.5C14.0596 15.5 13.5 16.0596 13.5 16.75C13.5 17.4404 14.0596 18 14.75 18C15.4404 18 16 17.4404 16 16.75C16 16.0596 15.4404 15.5 14.75 15.5Z"
                        fill="#FFFFFF"
                        fill-rule="evenodd"
                        stroke="none"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                    <span
                      class="absolute top-3 left-3.5 h-4 w-4 z-10 bg-white rounded-full"
                    >
                      <div
                        class="absolute top-0 left-1 z-15 text-coreUI-text-primary text-xs leading-4 font-semibold"
                      >
                        0
                      </div>
                    </span>
                    <span
                      class="sr-only"
                    >
                      items in cart, view bag
                    </span>
                  </div>
                </a>
              </div>
            </div>
          </div>
        </div>
      </nav>
    </header>
  </div>
</div>
`;
